Updated Kafka. Updated Lombok. Added Spring Boot Camel. Simplifications.