@@ -8,7 +8,6 @@
  */
 
 apply plugin: 'spring-boot'
-applicationDefaultJvmArgs = ["-XX:MaxPermSize=128M"]
 
 build.dependsOn bootRepackage
 
@@ -32,10 +31,12 @@ dependencies {
   compile libraries.springBootActuator
 
   // Camel
-  compile("org.apache.camel:camel-spring-javaconfig:$camelVersion") { exclude group: 'org.springframework' }
   compile "org.apache.camel:camel-core:$camelVersion"
+  compile "org.apache.camel:camel-spring-boot:$camelVersion"
   compile "org.apache.camel:camel-quickfix:$camelVersion"
   compile "org.apache.camel:camel-kafka:$camelVersion"
+  compile 'org.scala-lang:scala-library:2.10.4'
+  
 
   // QuickFIX/J
   compile "quickfixj:quickfixj-all:$quickfixjVersion"
